# autotune

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
commands/: __init__.py  chat.py  convert.py  download.py  evaluate.py  train_config.py  train_dpo.py  train_ppo.py  train_reward.py  train_sft.py
configs/: dpo_standard.yaml  reward_model.yaml  sft_gpt2_quick.yaml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx  (+3 more)
docs/src/styles/: custom.css
src/: __init__.py  interactive.py
src/auto_bot_tuner/: __init__.py
src/auto_bot_tuner/dpo/: __init__.py  dataset.py  loss.py  trainer.py
src/auto_bot_tuner/evaluation/: __init__.py  generation.py  metrics.py
src/auto_bot_tuner/rlhf/: __init__.py  dataset.py  loss.py  ppo_loss.py  ppo_trainer.py  reward_model.py  rollout_buffer.py  trainer.py  value_network.py
src/auto_bot_tuner/sft/: __init__.py  dataset.py  loss.py  trainer.py
src/auto_bot_tuner/utils/: __init__.py  model_loading.py
src/wizard/: __init__.py  checkpoint_detector.py  dashboard.py  integration_example.py  model_registry.py  models.py  pipelines.py  prerequisites.py  progress_tracker.py  recommendations.py
tests/: __init__.py  conftest.py  test_dpo_dataset.py  test_dpo_loss.py  test_dpo_trainer.py  test_evaluation_generation.py  test_evaluation_metrics.py  test_model_loading.py  test_ppo.py  test_rlhf_dataset.py  test_rlhf_reward_model.py  test_rlhf_trainer.py  test_sft_dataset.py  test_sft_loss.py  test_sft_trainer.py
(+22 files in other folders)
